# soia-cc-gen

./: .gitignore  README  README.md  package-lock.json  package.json  pre_commit.sh
.github/workflows/: ci.yml
client/: BUILD.bazel  MODULE.bazel  soia.cc  soia.h  soia.testing.h
e2e-test/: BUILD.bazel  MODULE.bazel  README  httplib.h  package-lock.json  package.json  reserializer.testing.h  soia.cc  soia.h  soia.test.cc  soia.testing.h  soia.yml  soia_api.test.cc  soia_goldens.test.cc  soia_service.test.cc  soiagen.test.cc
e2e-test/src/: constants.soia  enums.soia  full_name.soia  goldens.soia  methods.soia  reflection.soia  simple_enum.soia  structs.soia
src/: enum_field.ts  index.ts  keywords.ts  recursivity_resolver.ts  type_speller.ts
