"""MODULE.bazel"""

module(name = "soia-client")

# Choose the most recent version available at
# https://registry.bazel.build/modules/abseil-cpp
bazel_dep(name = "abseil-cpp", version = "20250127.0")

# Choose the most recent version available at
# https://registry.bazel.build/modules/googletest
bazel_dep(name = "googletest", version = "1.16.0")
